// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabBar — snapshots > matches snapshot: empty tab bar (no tabs) 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Fixed tabs: Backlog + Dashboard — MD3 Secondary Tabs with Vuetify ripple -->
  <v-tabs data-v-3c3dc65a="" density="compact" height="48" color="primary" class="tabbar-fixed-tabs">
    <v-tab data-v-3c3dc65a="" value="backlog">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-view-list</v-icon> Backlog
    </v-tab>
    <v-tab data-v-3c3dc65a="" value="dashboard">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-chart-line</v-icon> Dashboard
    </v-tab>
  </v-tabs><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-left</v-icon>
  </button><!-- Scrollable tabs area -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <tab-bar-scroll-area-stub data-v-3c3dc65a="" filetabs="" groupedterminaltabs="" agenttabstylemap="[object Map]" groupenvelopestylemap="[object Map]" subtabbgmap="[object Map]" subtablabel="[Function]" isgroupcollapsed="[Function]"></tab-bar-scroll-area-stub>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-right</v-icon>
  </button>
</div>
<!-- Tab group context menu -->
<!--v-if-->"
`;

exports[`TabBar — snapshots > matches snapshot: tab bar with one terminal tab 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Fixed tabs: Backlog + Dashboard — MD3 Secondary Tabs with Vuetify ripple -->
  <v-tabs data-v-3c3dc65a="" density="compact" height="48" color="primary" class="tabbar-fixed-tabs">
    <v-tab data-v-3c3dc65a="" value="backlog">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-view-list</v-icon> Backlog
    </v-tab>
    <v-tab data-v-3c3dc65a="" value="dashboard">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-chart-line</v-icon> Dashboard
    </v-tab>
  </v-tabs><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-left</v-icon>
  </button><!-- Scrollable tabs area -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <tab-bar-scroll-area-stub data-v-3c3dc65a="" filetabs="" groupedterminaltabs="[object Object]" activetabid="tab-1" agenttabstylemap="[object Map]" groupenvelopestylemap="[object Map]" subtabbgmap="[object Map]" subtablabel="[Function]" isgroupcollapsed="[Function]"></tab-bar-scroll-area-stub>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-right</v-icon>
  </button>
</div>
<!-- Tab group context menu -->
<!--v-if-->"
`;
